cloud-deploy/overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloweb
spec:
  replicas: 2
