cloud-deploy/overlays/dev/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: hello-route
spec:
  parentRefs:
    - name: gateway-dev
  hostnames:
    - "hello-dev.kkuchima.com"
  rules:
    - backendRefs:
        - kind: Service
          name: dev-hello-svc
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
